--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -111,7 +111,7 @@
       <h2>關於本站</h2>
       <ul>
         <li><a href="/account/author">作者</a></li>          
-        <li><a href="/gallery">活動紀實</a></li>        
+        <li><a href="/photologue">活動紀實</a></li>        
         <li><a href="/account/about">網站開發人員</a></li>   
         <li><a href="/account/manual">網站使用手冊</a></li>           
         <li><a href="/account/statics/lesson">課程瀏覽人次統計</a></li>
