--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@ Licence URI: http://www.os-templates.com/template-terms
     </li>
       <li><a href="http://www.books.com.tw/products/0010703424" target="_blank"><img src="/static/images/icon_book.png">參考書</a></li>
       <li><a href="/account/author"><img src="/static/images/icon_master.png">作者</a></li>
-      <li><a href="/gallery"><img src="/static/images/icon_home.png">活動</a></li>      
+      <li><a href="/photologue"><img src="/static/images/icon_home.png">活動</a></li>      
       {% endif %}
     </ul>
     </div>
