--- a/static/starrr/starrr.css
+++ b/static/starrr/starrr.css
@@ -13,5 +13,5 @@
 .starrr.readonly a{color: dimgrey}
 .rating-wrapper {position: relative}
 .starrr.edit {position: absolute}
-.rating-wrapper .btn-danger {visibility: hidden; opacity: 0; transition: opacity 1s ease}
-.rating-wrapper:hover .btn-danger {visibility: visible; opacity: 1}
+.clear-btn {visibility: hidden; opacity: 0; transition: opacity 1s ease}
+.clear-btn.show {visibility: visible; opacity: 1}
