--- a/templates/teacher/work3_class.html
+++ b/templates/teacher/work3_class.html
@@ -35,63 +35,55 @@
   var btn_class_rating = 'btn-outline-dark', 
       btn_class_cancel = 'btn-outline-danger';
 
-  $('.rating-btn').addClass(btn_class_rating).click(function() {
-    $(this).parent().append('<div class="starrr edit"></div>');
-    var $ratingObj = $('.starrr.edit', $(this).parent());
-    var $origObj = $('.starrr.readonly', $(this).parent());
-    var $btnObj = $('button.rating-btn', $(this).parent());
-    var origValue = $origObj.data('rating');
-    if (!$btnObj.hasClass(btn_class_cancel)) {
-      $btnObj.addClass(btn_class_cancel).removeClass(btn_class_rating).text('取消');
-      $ratingObj.offset($origObj.offset());
-      $ratingObj.starrr({
-        rating: $origObj.data('rating'), 
-        change: function(e, value) {
-          var $this = $(e.target);
-          var $parent = $this.parent();
-          if (value === undefined)
-            value = origValue;
-          $.post('/teacher/work3/score/{{classroom.lesson}}/{{classroom.id}}/{{index}}/', {
-            workid: $parent.data('workid'),
-            stuid: $parent.data('stuid'),
-            score: value,
-          }, function(data){
-            if (!$parent.data('workid')) 
-              $parent.data('workid', data.workid);
-          });
-          $origObj.data({starrr: null, rating: value}).empty().starrr({readOnly: true});
-          $btnObj.removeClass(btn_class_cancel).addClass(btn_class_rating).text('評分');
-          $this.remove();
-        },
-      });
-    } else {
-      $btnObj.removeClass(btn_class_cancel).addClass(btn_class_rating).text('評分');
-      $('.starrr.edit', $(this).parent()).remove();
-    }
-  });
-  function whoisthat(e, v) {
-    console.log(this, e, v);
-  }
-  function whoisthis(e) {
-    console.log(this, e);
-    whoisthat(e, 0);
-  }
-  $('.clear-btn').click(function(e) {
-    var $parent = $(this).parent();
-    var $ratingObj = $('.starrr.edit', $parent);
-    var $origObj = $('.starrr.readonly', $parent);
-    var $btnObj = $('button.rating-btn', $parent);
-    if ($origObj.data('rating')) {
+  function do_rating(e, value) {
+    var $this = $(e.target), 
+        $parent = $this.parent(),
+        $ratingObj = $('.starrr.edit', $parent),
+        $origObj = $('.starrr.readonly', $parent),
+        $ratingBtn = $('button.rating-btn', $parent),
+        $clearBtn = $('button.clear-btn', $parent),
+        origValue = $origObj.data('rating');
+
+    if (value === undefined)
+      value = origValue;
+    
+    if (value !== origValue) {
       $.post('/teacher/work3/score/{{classroom.lesson}}/{{classroom.id}}/{{index}}/', {
         workid: $parent.data('workid'),
         stuid: $parent.data('stuid'),
-        score: 0,
+        score: value,
       }, function(data){
-        $parent.data('workid', 0);
-      });  
+        $parent.data('workid', data.workid);
+        $origObj.data({starrr: null, rating: value}).empty().starrr({readOnly: true});
+      });
     }
+    $ratingBtn.removeClass(btn_class_cancel).addClass(btn_class_rating).text('評分');
+    $clearBtn.removeClass('show');
     $ratingObj.remove();
-    $origObj.data({starrr: null, rating: 0}).empty().starrr({readOnly: true});
-    $btnObj.removeClass(btn_class_cancel).addClass(btn_class_rating).text('評分');
+  }
+
+  $('.rating-btn').addClass(btn_class_rating).click(function() {
+    var $parent = $(this).parent().append('<div class="starrr edit"></div>'), 
+        $ratingObj = $('.starrr.edit', $parent),
+        $origObj = $('.starrr.readonly', $parent),
+        $ratingBtn = $('button.rating-btn', $parent),
+        $clearBtn = $('button.clear-btn', $parent);
+    if (!$ratingBtn.hasClass(btn_class_cancel)) {
+      $ratingBtn.addClass(btn_class_cancel).removeClass(btn_class_rating).text('取消');
+      if ($origObj.data('rating'))
+        $clearBtn.addClass('show');
+      $ratingObj.offset($origObj.offset()).starrr({
+        rating: $origObj.data('rating'), 
+        change: do_rating,
+      });
+    } else {
+      $ratingBtn.removeClass(btn_class_cancel).addClass(btn_class_rating).text('評分');
+      $clearBtn.removeClass('show');
+      $ratingObj.remove();
+    }
+  });
+
+  $('.clear-btn').click(function(e) {
+    do_rating(e, 0);
   });
 {% endblock %}
