--- a/templates/photologue/photo_detail.html
+++ b/templates/photologue/photo_detail.html
@@ -4,47 +4,59 @@
 {% block title %}{{ object.title }}{% endblock %}
 
 {% block content %}
+<div class="row col-lg-12">
+  <h1 class="page-header">{{ object.title }}</h1>
+  <p class="muted">
+    <small>{% trans "Published" %} {{ object.date_added }}</small>
+  </p>
+</div>
 
-    <div class="row col-lg-12">
-        <h1 class="page-header">{{ object.title }}</h1>
-        <p class="muted"><small>{% trans "Published" %} {{ object.date_added }}</small></p>
-    </div>
-
-    <div class="row">
-        <div class="col-md-6">
-		    {% if object.caption %}<p>{{ object.caption|safe }}</p>{% endif %}
-		    <a href="#" data-toggle="modal" data-target="#picture">
-		        <img src="{{ object.get_display_url }}" class="thumbnail" alt="{{ object.title }}">
-		    </a>
-        </div>
-        <div class="col-md-6">
-            {% if object.public_galleries %}
-                <p>{% trans "This photo is found in the following galleries" %}:</p>
-                <table>
-                    {% for gallery in object.public_galleries %}
-                        <tr>
-                            <td>{% previous_in_gallery object gallery %}</td>
-	                        <td class="text-center"><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></td>
-	                        <td>{% next_in_gallery object gallery %}</td>
-                        </tr>
-					{% endfor %}
-				</table>
-			{% endif %}
-        </div>
-    </div>
+<div class="row">
+  <div class="col-md-6">
+    {% if object.caption %}
+    <p>{{ object.caption|safe }}</p>{% endif %}
+    <a href="#" data-toggle="modal" data-target="#picture">
+      <img src="{{ object.get_display_url }}" class="thumbnail" alt="{{ object.title }}">
+    </a>
+  </div>
+  <div class="col-md-6">
+    {% if object.public_galleries %}
+    <p>{% trans "This photo is found in the following galleries" %}:</p>
+    <table>
+      {% for gallery in object.public_galleries %}
+      <tr>
+        <td>{% previous_in_gallery object gallery %}</td>
+        <td class="text-center">
+          <a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a>
+        </td>
+        <td>{% next_in_gallery object gallery %}</td>
+      </tr>
+      {% endfor %}
+    </table>
+    {% endif %}
+  </div>
+</div>
 
 <div class="modal fade" tabindex="-1" role="dialog" id="picture">
-  <div class="modal-dialog modal-lg" role="document">
+  <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-body">
-        <img src="{{ object.image.url }}" width="765px">
+        <img src="{{ object.image.url }}" style="max-width: 100%">
       </div>
       <!-- Modal footer -->
       <div class="modal-footer">
         <button type="button" class="btn btn-danger btn-sm" data-dismiss="modal">Close</button>
       </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    </div>
+    <!-- /.modal-content -->
+  </div>
+  <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
 {% endblock %}
 
+{% block domready %}
+  $('#picture').on('shown.bs.modal', function(e) {
+    $('body').css('padding-right', '');
+  });
+{% endblock %}
