--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -73,6 +73,8 @@
   #summary>div {position: absolute; bottom: 21px; width: 219px; line-height: 37px; text-align: center}
   #summary2 {position: relative; padding: 0}
   #summary2>div {position: absolute; bottom: 55px; width: 219px; line-height: 37px; text-align: center}  
+  #summary3 {position: relative; padding: 0}
+  #summary3>div {position: absolute; bottom: 55px; width: 219px; line-height: 37px; text-align: center}    
 </style>
 {% endblock %}
 {% block banner %}
@@ -193,7 +195,18 @@
           <div style="left:646px">
             <a href="/student/work/list/6" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">x 班次共 x 個作業</a>
           </div>
-          
+        </div>
+        <div id="summary3">
+          <img src="/static/images/work3.png">
+          <div style="left:27px">
+            <a href="/student/work/list/1" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.1.0}} 班次共 {{works.1.1}} 個作業</a>
+          </div>
+          <div style="left:333px">
+            <a href="/student/work/list/2" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.2.0}} 班次共 {{works.2.1}} 個作業</a>
+          </div>
+          <div style="left:646px">
+             <a href="/student/work/list/3" style="color: #000000; background: rgba(0, 0, 0, 0);text-decoration: none">{{works.3.0}} 班次共 {{works.3.1}} 個作業</a>
+          </div>
         </div>
       </div>
       <div class="clear"></div>
