--- a/templates/student/lesson/C03.html
+++ b/templates/student/lesson/C03.html
@@ -1,4 +1,4 @@
-﻿<h1>質因數</h1>
+<h1>(3)質因數</h1>
 
 <p>120的所有因數有1,2,3,4,5,6,8,10,12,15,20,24,30,40,60, 120</p>
 <p>這些因數中，有2,3,5三個數是質數，因此又稱為120的質因數，</p>
