--- a/templates/student/lesson/C04.html
+++ b/templates/student/lesson/C04.html
@@ -1,4 +1,4 @@
-<h1>回文數(palindromic number)</h1>
+<h1>(4)回文數(palindromic number)</h1>
 <p>回文數(或迴文數)是指一個像14641這樣「對稱」的數，即：將這個數的數字按相反的順序重新排列後，所得到的數和原來的數一樣。</p>
 <p>【最後目標】</p>
 <p>在二個二位數字乘積的數字中，最大的回文數是9009=91*99</p>
