--- a/templates/student/lesson/C13.html
+++ b/templates/student/lesson/C13.html
@@ -1,4 +1,4 @@
-  <p>長整數相加</p>
+  <h1>(13)長整數相加</h1>
 <p>【最後目標】</p>
 <p>有100個長整數，每一個數字都長達50位數，請求出這100個數字總和的前十位數字。</p>
 <div class="highlight-bash"><div class="highlight"><pre>37107287533902102798797998220837590246510135740250
