--- a/templates/student/lesson/C15.html
+++ b/templates/student/lesson/C15.html
@@ -1,4 +1,4 @@
-  <p>格子路徑</p>
+<h1>(15)格子路徑</h1>
 <p>從2*2方格的左上角出發，沿著向右或向下的路徑前進，最後到達右下角，總共有6種不同的走法。</p>
 <p><img src="/static/lesson/euler/lattice1.gif"></p>
 <p>【最後目標】</p>
