--- a/templates/student/lesson/C17.html
+++ b/templates/student/lesson/C17.html
@@ -1,4 +1,4 @@
-<p>英文數字</p>
+<h1>(17)英文數字</h1>
 <p>342轉成英文後是「three hundred and forty-two」這個英文字總共包含23個字母。</p>
 <p>115轉成英文後是「one hundred and fifteen」這個英文字總共包含20個字母。</p>
 <p>【最後目標】</p>
