--- a/templates/student/lesson/C18.html
+++ b/templates/student/lesson/C18.html
@@ -1,4 +1,4 @@
-<p>最大路徑和</p>
+<h1>(18)最大路徑和</h1>
 <p>一個給定的4層數字三角形（第n層有n個數），從最頂數位出發每次只能移動到左下或右下的直到最底層。在所有的路徑中，經過路徑數字和最大值是3+7+4+9=23。</p>
 <p><img src="/static/lesson/euler/route1.png"></p>
 <p>【最後目標】</p>
