--- a/templates/student/lesson/C20.html
+++ b/templates/student/lesson/C20.html
@@ -1,4 +1,4 @@
-<p>階乘數字和</p>
+<h1>(20)階乘數字和</h1>
 <p>一個正整數的階乘（英語：factorial）是所有小於及等於該數的正整數的乘積，並且有0的階乘為1。自然數n的階乘寫作n!。</p>
 <p>5! = 5*4*3*2*1 = 120</p>
 <p>將5!展開後的數字和為1+2+0=3</p>
