--- a/templates/student/lesson/C02.html
+++ b/templates/student/lesson/C02.html
@@ -1,4 +1,4 @@
-﻿<h1>費式數列(Fibonacci)</h1>
+<h1>(2)費式數列(Fibonacci)</h1>
 
 <p>規則：第一項為1，第二項為1，往後每一項數字為前二項數字和。</p>
 <img src="/static/lesson/euler/g002-1.png">
