--- a/templates/base.html
+++ b/templates/base.html
@@ -33,11 +33,15 @@ Licence URI: http://www.os-templates.com/template-terms
       <li><a href="#"><img src="/static/images/icon_lesson.png"> 課程</a>
         <ul>
           <li><a href="/student/lessons/A">程式設計輕鬆學：使用Scratch2.X</a></li>
-          <li><a href="/student/lessons/B">VPhysics物理模擬：使用Python2</a></li>
-          <li><a href="/student/lessons/C">Euler數學解題：使用Python3</a></li>
-          <li><a href="/student/lessons/E">VPhysics物理模擬：使用Python3</a></li>
-          <li><a href="/student/lessons/D">VPhysics物理模擬：建中特色課程</a></li>
-          <li><a href="/student/lessons/G">Django網站開發：使用Python3</a></li>         
+          <li><a href="#">VPhysics(Python)物理模擬程式設計</a>
+            <ul>
+              <li><a href="/student/lessons/B">南港高中課程：使用Python2</a></li>            
+              <li><a href="/student/lessons/E">南港高中課程：使用Python3</a></li>                 
+              <li><a href="/student/lessons/D">建中特色課程：使用Python3</a></li>
+            </ul>  
+          </li>          
+          <li><a href="/student/lessons/G">Django網站開發：使用Python3</a></li>   
+          <li><a href="/student/lessons/C">Euler數學解題：使用Python3</a></li>  
           <li><a href="https://hackmd.io/c/rJ1XHSk77/https%3A%2F%2Fhackmd.io%2Fs%2FB1PqMcJbX" target="_blank">Pandas數據分析：使用Python3</a></li>
           <li><a href="http://drweb.nksh.tp.edu.tw/student/lessons/M" target="_blank">機器人程式設計：使用Microbit</a></li> 
           <li><a href="/student/lessons/F">網路讀書會：好書共讀</a></li>
