--- a/templates/base.html
+++ b/templates/base.html
@@ -35,12 +35,16 @@ Licence URI: http://www.os-templates.com/template-terms
           <li><a href="/student/lessons/A">程式設計輕鬆學：使用Scratch2.X</a></li>
           <li><a href="#">VPhysics(Python)物理模擬程式設計</a>
             <ul>
-              <li><a href="/student/lessons/B">南港高中課程：使用Python2</a></li>            
-              <li><a href="/student/lessons/E">南港高中課程：使用Python3</a></li>                 
-              <li><a href="/student/lessons/D">建中特色課程：使用Python3</a></li>
+              <li><a href="/student/lessons/B">南港高中通識課程：使用Python2</a></li>            
+              <li><a href="/student/lessons/E">南港高中通識課程：使用Python3</a></li>                 
+              <li><a href="/student/lessons/D">建國中學特色課程：使用Python3</a></li>
             </ul>  
           </li>          
-          <li><a href="/student/lessons/G">Django網站開發：使用Python3</a></li>   
+          <li><a href="#">Django(Python)網站開發程式設計</a>
+            <ul>
+              <li><A href="/student/lessons/G">南港高中特色課程：使用Python3</A></li>
+            </ul>          
+          </li>   
           <li><a href="/student/lessons/C">Euler數學解題：使用Python3</a></li>  
           <li><a href="https://hackmd.io/c/rJ1XHSk77/https%3A%2F%2Fhackmd.io%2Fs%2FB1PqMcJbX" target="_blank">Pandas數據分析：使用Python3</a></li>
           <li><a href="http://drweb.nksh.tp.edu.tw/student/lessons/M" target="_blank">機器人程式設計：使用Microbit</a></li> 
