--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,12 @@ Licence URI: http://www.os-templates.com/template-terms
       <li><a href="/"><img src="/static/images/icon_home.png"> 首頁</a></li>
       <li><a href="#"><img src="/static/images/icon_lesson.png"> 課程</a>
         <ul>
-          <li><a href="/student/lessons/A">程式設計輕鬆學：使用Scratch2.X</a></li>
+          <li><a href="#">Scratch動畫及遊戲創作程式設計</a> 
+            <ul>
+              <li><a href="/student/lessons/A">程式設計輕鬆學：使用Scratch2.X</a></li>
+            </ul>         
+          
+          </li>
           <li><a href="#">VPhysics(Python)物理模擬程式設計</a>
             <ul>
               <li><a href="/student/lessons/B">南港高中通識課程：使用Python2</a></li>            
