add group rating

--- a/templates/teacher/work3_class.html
+++ b/templates/teacher/work3_class.html
@@ -4,6 +4,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/static/starrr/starrr.css">
 <script type="text/javascript" src="/static/starrr/starrr.js"></script>
+<style>
+body.modal-open {overflow-y: auto !important;padding-right: 0 !important;}
+.modal-scrollbar-measure {overflow: hidden;}
+</style>
 {% endblock %}
 
 {% block content %}
