--- a/templates/student/lessonD.html
+++ b/templates/student/lessonD.html
@@ -318,7 +318,7 @@
   <br />
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="tab1" role="tabpanel" aria-labelledby="home-tab">
-      {% include "student/lesson/C10.html" %}
+      {% include "student/lesson/D10.html" %}
     </div><!--
     <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab4">
       <iframe width="880" height="520" src="https://www.youtube.com/embed/572yOF407vw?autoplay=0&autostart=0&enablejsapi=1" frameborder="0" allowfullscreen></iframe>
@@ -328,8 +328,6 @@
       {% include "student/submitC.html" with index=10 %}
     </div>
     {% endif %}	
-  </div>
-</section>	
   </div>
 </section>
 {% else %}
