--- a/templates/teacher/work_list.html
+++ b/templates/teacher/work_list.html
@@ -17,12 +17,17 @@
         <table class="table">
             <tr>
                 <td>名稱</td>                
-                <td colspan=2>功能</td>		
+                <td colspan=3>功能</td>		
 		{% for work in works %}
             <tr>
             <td>{{work.0}}){{work.1}}</td>			
             <td><a href="/teacher/work/class/0/{{classroom.lesson}}/{{classroom.id}}/{{forloop.counter}}" target="_blank">評分</a></td>
             <td><a href="/student/work/memo/0/{{classroom.lesson}}/{{classroom.id}}/{{forloop.counter}}" target="_blank">心得</a></td>			
+            <td>  
+            {% if classroom.lesson == 4 %}
+            <a href="/teacher/work/word/{{classroom.lesson}}/{{classroom.id}}/{{forloop.counter}}" target="_blank">匯出Word</a>
+            {% endif %}
+              </td>
             </tr>
 		{% endfor %}
         </table>		
