--- a/templates/student/show.html
+++ b/templates/student/show.html
@@ -41,7 +41,7 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
   {% else %}
     尚未繳交
   {% endif %}
-{% elif lesson == "2" or lesson == "3" or lesson == "5" %}
+{% elif lesson == "2" or lesson == "3" or lesson == "5" or lesson == "7" %}
   {% if work %}
     {% if work.score > 0 %}<div>分數：{{ work.score}} / 評分者：{{ work.scorer|realname}}</div>{% endif %}
     <div>心得感想：</div>
