--- a/templates/student/submit.html
+++ b/templates/student/submit.html
@@ -4,7 +4,7 @@
     {% include "student/submitA.html" %}
 {% elif lesson == "4" %}
     {% include "student/submitC.html" %}
-{% elif lesson == "2" or lesson == "3" or lesson == "5" %}
+{% elif lesson == "2" or lesson == "3" or lesson == "5" or lesson == "7" %}
     {% include "student/submitB.html" %}
 {% endif %}
 {% endblock %}
