--- a/templates/student/lessons.html
+++ b/templates/student/lessons.html
@@ -343,9 +343,9 @@ function MM_swapImage() { //v3.0
     {% endif %}
     </td>
   </tr>
-  </table>
+  </table>   
 <img src="/static/images/vphysics/certificate.png">
-<BR>本單元課程自2018.4.23日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	    
+<BR>本單元課程自2018.4.23日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次  <a href='https://www.freepik.com/free-vector/assorted-round-icons_745439.htm' target="_blank">Designed by Freepik</a>
 {% elif subject_id == "C" %}
 <img src="/static/images/euler/euler.png"><BR>
     <a href="/static/files/programming_euler.pdf" target="_blank" role="button" class="btn btn-info">教材簡介</a>
@@ -548,7 +548,7 @@ function MM_swapImage() { //v3.0
   </tr>
   </table>
 <img src="/static/images/vphysics/certificate.png">
-<BR>本單元課程自2018.7.5日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	    
+<BR>本單元課程自2018.7.5日起已被瀏覽 <a href="/student/counter/{{lesson}}" target="_blank">{{counter}}</a> 次	    <a href='https://www.freepik.com/free-vector/assorted-round-icons_745439.htm' target="_blank">Designed by Freepik</a>
 {% elif subject_id == "G" %}
 <img src="/static/images/django/django.png"><BR>本課程陸續上架中..
 <!--
