--- a/templates/teacher/scoring.html
+++ b/templates/teacher/scoring.html
@@ -99,7 +99,9 @@ swfobject.embedSWF("/static/sb2/Scratch.swf", "flashContent", "482", "387", "10.
         {% elif lesson == "4" %}
         <img width=880 src="/static/work/ck/{{student.id}}/{{index}}/{{pic}}.jpg">     
         {% elif lesson == "5" %}
-        <img width=880 src="/static/work/vphysics2/{{student.id}}/{{index}}/{{pic}}.jpg">            
+        <img width=880 src="/static/work/vphysics2/{{student.id}}/{{index}}/{{pic}}.jpg">      
+        {% elif lesson == "7" %}
+        <img width=880 src="/static/work/pandas/{{student.id}}/{{index}}/{{pic}}.jpg">                
         {% endif %}
         <form action="" enctype="multipart/form-data"  method="post">
             <table class="table" style="width:300px">
